--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -54,8 +54,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p>Angular Fullstack v2.0.13 |
-      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-      <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+    <p>restClient 0.0.1 |
+      <a href="http://benlehr-dev.net">BenLehr</a> | <i class="fa fa-heart-o"></i>
     </div>
   </footer>
